@@ -8,10 +8,8 @@
  */
 package org.dita.dost.reader;
 
-import static java.util.Arrays.asList;
 import static org.dita.dost.module.GenMapAndTopicListModule.ELEMENT_STUB;
 import static org.dita.dost.util.Constants.*;
-import static org.dita.dost.util.URLUtils.stripFragment;
 
 import java.io.File;
 import java.net.URI;
@@ -21,7 +19,10 @@ import org.dita.dost.exception.DITAOTException;
 import org.dita.dost.util.URLUtils;
 import org.dita.dost.util.XMLUtils;
 import org.dita.dost.writer.AbstractDomFilter;
-import org.w3c.dom.*;
+import org.w3c.dom.Attr;
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.w3c.dom.Node;
 
 /**
  * Cascade map metadata to child topic references and collect metadata for topics.
@@ -31,95 +32,81 @@ public final class MapMetaReader extends AbstractDomFilter {
   /**
    * Cascaded metadata. Contents <topic relative URI, <class matcher, cascading metadata elements>>.
    */
-  private final Map<URI, Map<String, Element>> resultTable = new HashMap<>(16);
+  private final Map<URI, Map<String, Element>> resultTable = new HashMap<>();
 
-  private static final Set<String> uniqueSet = Collections.unmodifiableSet(
-    new HashSet<>(
-      asList(
-        TOPIC_CRITDATES.matcher,
-        TOPIC_PERMISSIONS.matcher,
-        TOPIC_PUBLISHER.matcher,
-        TOPIC_SOURCE.matcher,
-        MAP_SEARCHTITLE.matcher,
-        TOPIC_SEARCHTITLE.matcher
-      )
-    )
+  private static final Set<String> uniqueSet = Set.of(
+    TOPIC_CRITDATES.matcher,
+    TOPIC_PERMISSIONS.matcher,
+    TOPIC_PUBLISHER.matcher,
+    TOPIC_SOURCE.matcher,
+    MAP_SEARCHTITLE.matcher,
+    TOPIC_SEARCHTITLE.matcher
   );
-  private static final Set<String> cascadeSet = Collections.unmodifiableSet(
-    new HashSet<>(
-      asList(
-        TOPIC_AUDIENCE.matcher,
-        TOPIC_AUTHOR.matcher,
-        TOPIC_CATEGORY.matcher,
-        TOPIC_COPYRIGHT.matcher,
-        TOPIC_CRITDATES.matcher,
-        TOPIC_METADATA.matcher,
-        TOPIC_PERMISSIONS.matcher,
-        TOPIC_PRODINFO.matcher,
-        TOPIC_PUBLISHER.matcher
-      )
-    )
+  private static final Set<String> cascadeSet = Set.of(
+    TOPIC_AUDIENCE.matcher,
+    TOPIC_AUTHOR.matcher,
+    TOPIC_CATEGORY.matcher,
+    TOPIC_COPYRIGHT.matcher,
+    TOPIC_CRITDATES.matcher,
+    TOPIC_METADATA.matcher,
+    TOPIC_PERMISSIONS.matcher,
+    TOPIC_PRODINFO.matcher,
+    TOPIC_PUBLISHER.matcher
   );
-  private static final Set<String> metaSet = Collections.unmodifiableSet(
-    new HashSet<>(
-      asList(
-        MAP_SEARCHTITLE.matcher,
-        TOPIC_SEARCHTITLE.matcher,
-        TOPIC_AUTHOR.matcher,
-        TOPIC_SOURCE.matcher,
-        TOPIC_PUBLISHER.matcher,
-        TOPIC_COPYRIGHT.matcher,
-        TOPIC_CRITDATES.matcher,
-        TOPIC_PERMISSIONS.matcher,
-        TOPIC_AUDIENCE.matcher,
-        TOPIC_CATEGORY.matcher,
-        TOPIC_KEYWORDS.matcher,
-        TOPIC_PRODINFO.matcher,
-        TOPIC_OTHERMETA.matcher,
-        TOPIC_RESOURCEID.matcher,
-        TOPIC_DATA.matcher,
-        TOPIC_DATA_ABOUT.matcher,
-        TOPIC_FOREIGN.matcher,
-        TOPIC_UNKNOWN.matcher
-      )
-    )
+  private static final Set<String> metaSet = Set.of(
+    MAP_SEARCHTITLE.matcher,
+    TOPIC_SEARCHTITLE.matcher,
+    TOPIC_AUTHOR.matcher,
+    TOPIC_SOURCE.matcher,
+    TOPIC_PUBLISHER.matcher,
+    TOPIC_COPYRIGHT.matcher,
+    TOPIC_CRITDATES.matcher,
+    TOPIC_PERMISSIONS.matcher,
+    TOPIC_AUDIENCE.matcher,
+    TOPIC_CATEGORY.matcher,
+    TOPIC_KEYWORDS.matcher,
+    TOPIC_PRODINFO.matcher,
+    TOPIC_OTHERMETA.matcher,
+    TOPIC_RESOURCEID.matcher,
+    TOPIC_DATA.matcher,
+    TOPIC_DATA_ABOUT.matcher,
+    TOPIC_FOREIGN.matcher,
+    TOPIC_UNKNOWN.matcher
   );
-  private static final List<String> metaPos = Collections.unmodifiableList(
-    asList(
-      MAP_SEARCHTITLE.matcher,
-      TOPIC_SEARCHTITLE.matcher,
-      TOPIC_AUTHOR.matcher,
-      TOPIC_SOURCE.matcher,
-      TOPIC_PUBLISHER.matcher,
-      TOPIC_COPYRIGHT.matcher,
-      TOPIC_CRITDATES.matcher,
-      TOPIC_PERMISSIONS.matcher,
-      TOPIC_AUDIENCE.matcher,
-      TOPIC_CATEGORY.matcher,
-      TOPIC_KEYWORDS.matcher,
-      TOPIC_PRODINFO.matcher,
-      TOPIC_OTHERMETA.matcher,
-      TOPIC_RESOURCEID.matcher,
-      TOPIC_DATA.matcher,
-      TOPIC_DATA_ABOUT.matcher,
-      TOPIC_FOREIGN.matcher,
-      TOPIC_UNKNOWN.matcher,
-      MAP_LINKTEXT.matcher,
-      TOPIC_LINKTEXT.matcher,
-      MAP_SHORTDESC.matcher,
-      TOPIC_SHORTDESC.matcher,
-      TOPIC_NAVTITLE.matcher,
-      TOPIC_METADATA.matcher
-    )
+  private static final List<String> metaPos = List.of(
+    MAP_SEARCHTITLE.matcher,
+    TOPIC_SEARCHTITLE.matcher,
+    TOPIC_AUTHOR.matcher,
+    TOPIC_SOURCE.matcher,
+    TOPIC_PUBLISHER.matcher,
+    TOPIC_COPYRIGHT.matcher,
+    TOPIC_CRITDATES.matcher,
+    TOPIC_PERMISSIONS.matcher,
+    TOPIC_AUDIENCE.matcher,
+    TOPIC_CATEGORY.matcher,
+    TOPIC_KEYWORDS.matcher,
+    TOPIC_PRODINFO.matcher,
+    TOPIC_OTHERMETA.matcher,
+    TOPIC_RESOURCEID.matcher,
+    TOPIC_DATA.matcher,
+    TOPIC_DATA_ABOUT.matcher,
+    TOPIC_FOREIGN.matcher,
+    TOPIC_UNKNOWN.matcher,
+    MAP_LINKTEXT.matcher,
+    TOPIC_LINKTEXT.matcher,
+    MAP_SHORTDESC.matcher,
+    TOPIC_SHORTDESC.matcher,
+    TOPIC_NAVTITLE.matcher,
+    TOPIC_METADATA.matcher
   );
 
   private final Map<String, Element> globalMeta;
   /** Current document. */
   private Document doc = null;
   /** Result metadata document. */
-  private Document resultDoc = null;
+  private Document resultDoc;
   /** Current file. */
-  private File filePath = null;
+  private URI filePath;
 
   /**
    * Constructor.
@@ -127,8 +114,10 @@ public final class MapMetaReader extends AbstractDomFilter {
   public MapMetaReader() {
     super();
     globalMeta = new HashMap<>(16);
-    resultDoc = XMLUtils.getDocumentBuilder().newDocument();
-    resultTable.clear();
+  }
+
+  public void setXmlUtils(XMLUtils xmlUtils) {
+    resultDoc = xmlUtils.newDocument();
   }
 
   /**
@@ -137,7 +126,7 @@ public final class MapMetaReader extends AbstractDomFilter {
    */
   @Override
   public void read(final File filename) throws DITAOTException {
-    filePath = filename;
+    filePath = filename.toURI();
 
     //clear the history on global metadata table
     globalMeta.clear();
@@ -147,34 +136,62 @@ public final class MapMetaReader extends AbstractDomFilter {
   @Override
   public Document process(final Document doc) {
     this.doc = doc;
-    final NodeList list = doc.getDocumentElement().getChildNodes();
-    for (int i = 0; i < list.getLength(); i++) {
-      final Node node = list.item(i);
-      if (node.getNodeType() == Node.ELEMENT_NODE) {
-        final Element elem = (Element) node;
-        final Attr classAttr = elem.getAttributeNode(ATTRIBUTE_NAME_CLASS);
-        if (classAttr != null) {
-          // if this node is topicmeta node under root
-          if (MAP_TOPICMETA.matches(classAttr.getNodeValue())) {
-            handleGlobalMeta(elem);
-            // if this node is topicref node under root
-          } else if (MAP_TOPICREF.matches(classAttr.getNodeValue())) {
-            handleTopicref(elem, globalMeta);
-          }
-        }
-      }
+
+    for (var elem : XMLUtils.getChildElements(doc.getDocumentElement(), MAP_TOPICMETA)) {
+      handleGlobalMeta(elem);
     }
-    // Indexterm elements with either start or end attribute should not been
-    // move to referenced dita file's prolog section.
-    for (final Map<String, Element> resultTableEntry : resultTable.values()) {
-      for (final Map.Entry<String, Element> mapEntry : resultTableEntry.entrySet()) {
-        final String key = mapEntry.getKey();
-        if (TOPIC_KEYWORDS.matcher.equals(key)) {
-          removeIndexTermRecursive(mapEntry.getValue());
-        }
-      }
+    for (var elem : XMLUtils.getChildElements(doc.getDocumentElement(), MAP_TOPICREF)) {
+      handleTopicref(elem, globalMeta);
     }
+    for (Element keyword : XMLUtils.getChildElements(doc.getDocumentElement(), TOPIC_KEYWORDS, true)) {
+      removeIndexTermRecursive(keyword);
+    }
+    for (var elem : XMLUtils.getChildElements(doc.getDocumentElement(), MAP_TOPICREF)) {
+      collectTopicrefs(elem);
+    }
+
     return doc;
+  }
+
+  private void collectTopicrefs(final Element topicref) {
+    final URI hrefAttr = Optional
+      .ofNullable(topicref.getAttributeNode(ATTRIBUTE_NAME_HREF))
+      .map(Node::getNodeValue)
+      .map(URLUtils::toURI)
+      .orElse(null);
+    final Attr scopeAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_SCOPE);
+    final Attr formatAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_FORMAT);
+    Map<String, Element> current = Collections.emptyMap();
+    final boolean hasDitaTopicTarget = hrefAttr != null && isLocalScope(scopeAttr) && isDitaFormat(formatAttr);
+
+    for (Element elem : XMLUtils.getChildElements(topicref, MAP_TOPICREF)) {
+      collectTopicrefs(elem);
+    }
+
+    if (hasDitaTopicTarget) {
+      for (Element elem : XMLUtils.getChildElements(topicref, MAP_TOPICMETA)) {
+        current = handleMeta(elem, Collections.emptyMap());
+      }
+    }
+
+    if (!current.isEmpty() && hasDitaTopicTarget) {
+      final URI copytoAttr = Optional
+        .ofNullable(topicref.getAttributeNode(ATTRIBUTE_NAME_COPY_TO))
+        .map(Attr::getNodeValue)
+        .map(URLUtils::toURI)
+        .map(URLUtils::stripFragment)
+        .orElse(null);
+      final URI rel = Objects.requireNonNullElse(copytoAttr, hrefAttr);
+      final URI topicPath = job.tempDirURI.relativize(filePath.resolve(rel));
+      if (resultTable.containsKey(topicPath)) {
+        //if the result table already contains some result
+        //metadata for current topic path.
+        final Map<String, Element> previous = resultTable.get(topicPath);
+        resultTable.put(topicPath, mergeMeta(previous, current, metaSet));
+      } else {
+        resultTable.put(topicPath, cloneElementMap(current));
+      }
+    }
   }
 
   /**
@@ -186,91 +203,55 @@ public final class MapMetaReader extends AbstractDomFilter {
     if (parent == null) {
       return;
     }
-    final NodeList children = parent.getChildNodes();
-    Element child;
-    for (int i = children.getLength() - 1; i >= 0; i--) {
-      if (children.item(i).getNodeType() == Node.ELEMENT_NODE) {
-        child = (Element) children.item(i);
-        final boolean isIndexTerm = TOPIC_INDEXTERM.matches(child);
-        final boolean hasStart = !child.getAttribute(ATTRIBUTE_NAME_START).isEmpty();
-        final boolean hasEnd = !child.getAttribute(ATTRIBUTE_NAME_END).isEmpty();
-        if (isIndexTerm && (hasStart || hasEnd)) {
-          parent.removeChild(child);
-        } else {
-          removeIndexTermRecursive(child);
-        }
+    for (var child : XMLUtils.getChildElements(parent)) {
+      final boolean isIndexTerm = TOPIC_INDEXTERM.matches(child);
+      final boolean hasStart = !child.getAttribute(ATTRIBUTE_NAME_START).isEmpty();
+      final boolean hasEnd = !child.getAttribute(ATTRIBUTE_NAME_END).isEmpty();
+      if (isIndexTerm && (hasStart || hasEnd)) {
+        parent.removeChild(child);
+      } else {
+        removeIndexTermRecursive(child);
       }
     }
   }
 
   private void handleTopicref(final Element topicref, final Map<String, Element> inheritance) {
-    final Attr hrefAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_HREF);
-    final Attr copytoAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_COPY_TO);
+    final URI hrefAttr = Optional
+      .ofNullable(topicref.getAttributeNode(ATTRIBUTE_NAME_HREF))
+      .map(Node::getNodeValue)
+      .map(URLUtils::toURI)
+      .orElse(null);
     final Attr scopeAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_SCOPE);
     final Attr formatAttr = topicref.getAttributeNode(ATTRIBUTE_NAME_FORMAT);
-    Map<String, Element> current = mergeMeta(null, inheritance, cascadeSet);
-    Element metaNode = null;
+    Map<String, Element> current = mergeMeta(Collections.emptyMap(), inheritance, cascadeSet);
+    final boolean hasDitaTopicTarget = hrefAttr != null && isLocalScope(scopeAttr) && isDitaFormat(formatAttr);
 
-    final NodeList children = topicref.getChildNodes();
-    for (int i = 0; i < children.getLength(); i++) {
-      final Node node = children.item(i);
-      if (node.getNodeType() == Node.ELEMENT_NODE) {
-        final Element elem = (Element) node;
-        Attr classAttr = elem.getAttributeNode(ATTRIBUTE_NAME_CLASS);
-        if (classAttr != null) {
-          // if this node is topicmeta and the parent topicref refers to a valid dita topic
-          if (
-            MAP_TOPICMETA.matches(classAttr.getNodeValue()) &&
-            hrefAttr != null &&
-            isLocalScope(scopeAttr) &&
-            isDitaFormat(formatAttr)
-          ) {
-            metaNode = elem;
-            current = handleMeta(elem, inheritance);
-            // if this node is topicref node under topicref
-          } else if (MAP_TOPICREF.matches(classAttr.getNodeValue())) {
-            handleTopicref(elem, current);
-          }
-        }
+    if (hasDitaTopicTarget) {
+      for (Element elem : XMLUtils.getChildElements(topicref, MAP_TOPICMETA)) {
+        current = handleMeta(elem, inheritance);
       }
     }
 
-    if (!current.isEmpty() && hrefAttr != null) { // prevent the metadata is empty
-      if (isDitaFormat(formatAttr) && isLocalScope(scopeAttr)) {
-        URI topicPath;
-        if (copytoAttr != null) {
-          final URI copyToUri = stripFragment(URLUtils.toURI(copytoAttr.getNodeValue()));
-          topicPath = job.tempDirURI.relativize(filePath.toURI().resolve(copyToUri));
-        } else {
-          final URI hrefUri = URLUtils.toURI(hrefAttr.getNodeValue());
-          topicPath = job.tempDirURI.relativize(filePath.toURI().resolve(hrefUri));
-        }
-        if (resultTable.containsKey(topicPath)) {
-          //if the result table already contains some result
-          //metadata for current topic path.
-          final Map<String, Element> previous = resultTable.get(topicPath);
-          resultTable.put(topicPath, mergeMeta(previous, current, metaSet));
-        } else {
-          resultTable.put(topicPath, cloneElementMap(current));
-        }
-        final Map<String, Element> metas = resultTable.get(topicPath);
-        if (!metas.isEmpty()) {
-          if (metaNode != null) {
-            topicref.removeChild(metaNode);
-          }
-          final Element newMeta = doc.createElement(MAP_TOPICMETA.localName);
-          newMeta.setAttribute(ATTRIBUTE_NAME_CLASS, "-" + MAP_TOPICMETA.matcher);
-          for (String metaPo : metaPos) {
-            final Node stub = metas.get(metaPo);
-            if (stub != null) {
-              final NodeList clist = stub.getChildNodes();
-              for (int j = 0; j < clist.getLength(); j++) {
-                newMeta.appendChild(topicref.getOwnerDocument().importNode(clist.item(j), true));
-              }
+    for (Element elem : XMLUtils.getChildElements(topicref, MAP_TOPICREF)) {
+      handleTopicref(elem, current);
+    }
+
+    if (!current.isEmpty() && hasDitaTopicTarget) {
+      final Map<String, Element> metas = cloneElementMap(current);
+      if (!metas.isEmpty()) {
+        XMLUtils.getChildElement(topicref, MAP_TOPICMETA).ifPresent(topicref::removeChild);
+        final Element newMeta = doc.createElement(MAP_TOPICMETA.localName);
+        newMeta.setAttribute(ATTRIBUTE_NAME_CLASS, "-" + MAP_TOPICMETA.matcher);
+        for (String metaPo : metaPos) {
+          final Node stub = metas.get(metaPo);
+          if (stub != null) {
+            for (var child : XMLUtils.toList(stub.getChildNodes())) {
+              final Node copy = topicref.getOwnerDocument().importNode(child, true);
+              newMeta.appendChild(copy);
             }
           }
-          topicref.insertBefore(newMeta, topicref.getFirstChild());
         }
+        topicref.insertBefore(newMeta, topicref.getFirstChild());
       }
     }
   }
@@ -296,7 +277,8 @@ public final class MapMetaReader extends AbstractDomFilter {
   private Map<String, Element> cloneElementMap(final Map<String, Element> current) {
     final Map<String, Element> topicMetaTable = new HashMap<>(16);
     for (final Entry<String, Element> topicMetaItem : current.entrySet()) {
-      topicMetaTable.put(topicMetaItem.getKey(), (Element) resultDoc.importNode(topicMetaItem.getValue(), true));
+      final Element copy = (Element) resultDoc.importNode(topicMetaItem.getValue(), true);
+      topicMetaTable.put(topicMetaItem.getKey(), copy);
     }
     return topicMetaTable;
   }
@@ -308,46 +290,35 @@ public final class MapMetaReader extends AbstractDomFilter {
   }
 
   private void getMeta(final Element meta, final Map<String, Element> topicMetaTable) {
-    final NodeList children = meta.getChildNodes();
-    for (int i = 0; i < children.getLength(); i++) {
-      final Node node = children.item(i);
-      if (node.getNodeType() == Node.ELEMENT_NODE) {
-        final Element elem = (Element) node;
-        final Attr classAttr = elem.getAttributeNode(ATTRIBUTE_NAME_CLASS);
-        if (classAttr != null) {
-          final String classValue = classAttr.getNodeValue();
-          // int number 1 is used to remove the first "-" or "+" character in class attribute
-          final String metaKey = classValue.substring(
-            1,
-            classValue.indexOf(STRING_BLANK, classValue.indexOf(SLASH)) + 1
-          );
-          if (TOPIC_METADATA.matches(classValue)) {
-            getMeta(elem, topicMetaTable);
-          } else if (topicMetaTable.containsKey(metaKey)) {
-            //append node to the list if it exist in topic meta table
-            topicMetaTable.get(metaKey).appendChild(resultDoc.importNode(elem, true));
-          } else {
-            if (TOPIC_NAVTITLE.matches(classValue)) {
-              //Add locktitle value to navtitle so we know whether it should be pushed to topics
-              final String locktitleAttr = ((Element) meta.getParentNode()).getAttributeNode(
-                    ATTRIBUTE_NAME_LOCKTITLE
-                  ) !=
-                null
-                ? ((Element) meta.getParentNode()).getAttributeNode(ATTRIBUTE_NAME_LOCKTITLE).getNodeValue()
-                : "no";
-              elem.setAttributeNS(DITA_OT_NS, DITA_OT_NS_PREFIX + ":" + ATTRIBUTE_NAME_LOCKTITLE, locktitleAttr);
-            }
-            final Element stub = resultDoc.createElement(ELEMENT_STUB);
-            stub.appendChild(resultDoc.importNode(elem, true));
-            topicMetaTable.put(metaKey, stub);
-          }
+    for (var elem : XMLUtils.getChildElements(meta)) {
+      final String classValue = elem.getAttribute(ATTRIBUTE_NAME_CLASS);
+      // int number 1 is used to remove the first "-" or "+" character in class attribute
+      final String metaKey = classValue.substring(1, classValue.indexOf(STRING_BLANK, classValue.indexOf(SLASH)) + 1);
+      if (TOPIC_METADATA.matches(classValue)) {
+        getMeta(elem, topicMetaTable);
+      } else if (topicMetaTable.containsKey(metaKey)) {
+        //append node to the list if it exists in topic meta table
+        final Node copy = resultDoc.importNode(elem, true);
+        topicMetaTable.get(metaKey).appendChild(copy);
+      } else {
+        if (TOPIC_NAVTITLE.matches(classValue)) {
+          //Add locktitle value to navtitle so we know whether it should be pushed to topics
+          final String locktitleAttr = Optional
+            .ofNullable(((Element) meta.getParentNode()).getAttributeNode(ATTRIBUTE_NAME_LOCKTITLE))
+            .map(Attr::getNodeValue)
+            .orElse("no");
+          elem.setAttributeNS(DITA_OT_NS, DITA_OT_NS_PREFIX + ":" + ATTRIBUTE_NAME_LOCKTITLE, locktitleAttr);
         }
+        final Node copy = resultDoc.importNode(elem, true);
+        final Element stub = resultDoc.createElement(ELEMENT_STUB);
+        stub.appendChild(copy);
+        topicMetaTable.put(metaKey, stub);
       }
     }
   }
 
   private Map<String, Element> mergeMeta(
-    Map<String, Element> topicMetaTable,
+    final Map<String, Element> topicMetaTable,
     final Map<String, Element> inheritance,
     final Set<String> enableSet
   ) {
@@ -356,66 +327,55 @@ public final class MapMetaReader extends AbstractDomFilter {
     // be inherited are merged.
     // Otherwise enableSet should be metaSet in order to merge all
     // metadata.
-    if (topicMetaTable == null) {
-      topicMetaTable = new HashMap<>(16);
-    }
+    final Map<String, Element> res = new HashMap<>(topicMetaTable);
     for (String key : enableSet) {
       if (inheritance.containsKey(key)) {
+        final Element value = inheritance.get(key);
         if (uniqueSet.contains(key)) {
-          if (!topicMetaTable.containsKey(key)) {
-            topicMetaTable.put(key, inheritance.get(key));
+          if (!res.containsKey(key)) {
+            res.put(key, value);
           }
         } else { // not unique metadata
-          if (!topicMetaTable.containsKey(key)) {
-            topicMetaTable.put(key, inheritance.get(key));
+          if (!res.containsKey(key)) {
+            res.put(key, value);
           } else {
             //not necessary to do node type check here
             //because inheritStub doesn't contains any node
             //other than Element.
-            final Element stub = topicMetaTable.get(key);
-            final Node inheritStub = inheritance.get(key);
+            final Element stub = res.get(key);
+            final Element inheritStub = value;
             if (stub != inheritStub) {
               // Merge the value if stub does not equal to inheritStub
               // Otherwise it will get into infinitive loop
-              final NodeList children = inheritStub.getChildNodes();
-              for (int i = 0; i < children.getLength(); i++) {
-                Node item = children.item(i).cloneNode(true);
-                item = stub.getOwnerDocument().importNode(item, true);
+              for (Element child : XMLUtils.getChildElements(inheritStub)) {
+                final Element item = (Element) stub.getOwnerDocument().importNode(child, true);
                 stub.appendChild(item);
               }
             }
-            topicMetaTable.put(key, stub);
+            res.put(key, stub);
           }
         }
       }
     }
-    return topicMetaTable;
+    return Collections.unmodifiableMap(res);
   }
 
   private void handleGlobalMeta(final Element metadata) {
-    final NodeList children = metadata.getChildNodes();
-    for (int i = 0; i < children.getLength(); i++) {
-      final Node node = children.item(i);
-      if (node.getNodeType() == Node.ELEMENT_NODE) {
-        final Element elem = (Element) node;
-        final Attr classAttr = elem.getAttributeNode(ATTRIBUTE_NAME_CLASS);
-        if (classAttr != null) {
-          final String classValue = classAttr.getNodeValue();
-          final String metaKey = classValue.substring(
-            1,
-            classValue.indexOf(STRING_BLANK, classValue.indexOf(SLASH)) + 1
-          );
-          if (TOPIC_METADATA.matches(classValue)) {
-            //proceed the metadata in <metadata>
-            handleGlobalMeta(elem);
-          } else if (cascadeSet.contains(metaKey) && globalMeta.containsKey(metaKey)) {
-            //append node to the list if it exist in global meta table
-            globalMeta.get(metaKey).appendChild(resultDoc.importNode(elem, true));
-          } else if (cascadeSet.contains(metaKey)) {
-            final Element stub = resultDoc.createElement(ELEMENT_STUB);
-            stub.appendChild(resultDoc.importNode(elem, true));
-            globalMeta.put(metaKey, stub);
-          }
+    for (var elem : XMLUtils.getChildElements(metadata)) {
+      final Attr classAttr = elem.getAttributeNode(ATTRIBUTE_NAME_CLASS);
+      if (classAttr != null) {
+        final String classValue = classAttr.getNodeValue();
+        final String metaKey = classValue.substring(1, classValue.indexOf(STRING_BLANK, classValue.indexOf(SLASH)) + 1);
+        if (TOPIC_METADATA.matches(classValue)) {
+          //proceed the metadata in <metadata>
+          handleGlobalMeta(elem);
+        } else if (cascadeSet.contains(metaKey) && globalMeta.containsKey(metaKey)) {
+          //append node to the list if it exist in global meta table
+          globalMeta.get(metaKey).appendChild(resultDoc.importNode(elem, true));
+        } else if (cascadeSet.contains(metaKey)) {
+          final Element stub = resultDoc.createElement(ELEMENT_STUB);
+          stub.appendChild(resultDoc.importNode(elem, true));
+          globalMeta.put(metaKey, stub);
         }
       }
     }
